tests/files/type_checker_tests/should_pass/264.cmdr
//Test if statements type check
if (true) { println 1; } else { println 2; }
