tests/files/type_checker_tests/should_fail/000.cmdr
//Should fail since if condition is not boolean
if ("true") {
	echo "HI";
}